2015-08-13  Richard Larsson <ric.larsson@gmail.com>

	* arts-2-3-272
	
	* src/lineshapes.cc:  Added mirrored Lorentzian line shape.  Useful
	when you only want a single line or species that is mirrored and not
	all lines are to be mirrored.  (E.g., NH3 in Jupiter atmosphere).
	
	* src/m_radiation_field.cc:  Fixed logic bugs reported by Oliver.

2015-08-12  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-271

	* ChangeLog: Fix version number continuity.

	* src/m_xml.h (WriteXML):

	Intercept exceptions crossing the critical region border. Fixes bug
	reported by gerrit in trac ticket #127.

	* src/xml_io.cc (xml_open_output_file):

	Catch file.open exceptions more broadly as different compilers throw
	different types of exception for the same error.

2015-08-11  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-270

	* controlfiles/instruments/metmm/sensor_descriptions/sensor_marss.arts:
	* controlfiles/instruments/metmm/sensor_descriptions/sensor_ismar.arts:
	Changed met_mm_freq_number to be 7 for all channels. Should be OK
	in most cases, while 12 should be unnecessary high.

	* controlfiles/instruments/metmm/sensor_descriptions/sensor_ismar.arts:
	Changed order between H and V for 243 and 664 GHz, to follow
	changed order in L1b file. And new order is better, H before V
	which is the alphabetical order.

2015-08-11  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-269

	* A small restructuring in met-mm. I have separated the definition
	and the application of the settings. This to make things more
	modular, e.g. to allow that the basic settings can be extracted
	without doing any calculations. Instead of

	  INCLUDE "instruments/metmm/sensor_descriptions/sensor_mhs.arts"

	you must now do

	  INCLUDE "instruments/metmm/sensor_descriptions/sensor_mhs.arts"
	  INCLUDE "instruments/metmm/sensor_descriptions/apply_metmm.arts"

	* controlfiles/instruments/metmm/sensor_descriptions/apply_metmm.arts: New.
